Tightened up space in the top frame.  Fixed channel picker button spacing and oval shape on highlight.  Removed extra space between frame and the view (issue #10)

--- a/packages/renderer/src/Frame.css
+++ b/packages/renderer/src/Frame.css
@@ -1,6 +1,9 @@
+.frameContainer {
+  padding-top:.3rem;
+}
+
 #buttonsContainer {
   margin-left:.6rem;
   margin-right:.6rem;
-  padding-top:.6rem;
-}
 
+}
