--- a/packages/renderer/src/index.css
+++ b/packages/renderer/src/index.css
@@ -6,3 +6,10 @@ body {
   background-color: #ccc;
 }
 
+.frameButtons {
+  margin-left:.3rem;
+}
+
+.frameSearch {
+  width:90%;
+}
